# aircraftx

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
aircraftx/: __init__.py  __main__.py  config.py  config_file.py  log_writer.py
aircraftx/acars/: __init__.py  channel_defaults.py  channels.py  decoder.py  monitor.py
aircraftx/app/: __init__.py  cli.py  sniffer.py
aircraftx/decode/: __init__.py  labels.py  tracker.py
aircraftx/dsp/: __init__.py  am_demodulator.py  demodulator.py  iq.py  waveform.py
aircraftx/lookup/: __init__.py  hexdb.py  models.py  service.py
aircraftx/models/: __init__.py  aircraft.py
aircraftx/radio/: __init__.py  audio_output.py  backends.py  channel_defaults.py  channels.py  hackrf.py  local_lookup.py  receiver.py  rtlsdr.py  speech_segmenter.py  squelch.py  transcriber.py  voice_monitor.py
aircraftx/ui/: __init__.py  acars_display.py  bars.py  display.py  formatters.py  keyboard.py  map_window.py  radio_display.py
tests/: __init__.py  conftest.py  test_acars.py  test_adsb_pipeline.py  test_aircraft.py  test_am_demodulator.py  test_channels.py  test_cli.py  test_config_file.py  test_dashboard_switch.py  test_demodulator.py  test_display.py  test_formatters.py  test_hexdb.py  test_keyboard.py  test_labels.py  test_log_writer.py  test_lookup.py  test_map.py  test_radio_channels.py  test_radio_display.py  test_receiver_factory.py  test_squelch.py  test_tracker.py  test_tracker_caps.py  test_voice_monitor.py  test_waveform.py
tests/fixtures/ourairports/: airports.csv  (+1 more)
